// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payments .all() should return a list of all payments 1`] = `
Array [
  Payment {
    "amount": "100.00",
    "amountRefunded": null,
    "amountRemaining": null,
    "cancelledDatetime": null,
    "createdDatetime": "2017-04-29T21:48:33.0Z",
    "customerId": null,
    "description": "Test payment",
    "details": null,
    "expiredDatetime": "2017-04-29T22:05:01.0Z",
    "expiryPeriod": null,
    "id": "tr_nBeryjMVjr",
    "links": Object {
      "redirectUrl": "https://www.example.org/",
      "webhookUrl": "http://requestb.in/",
    },
    "locale": "nl",
    "mandateId": null,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "paidDatetime": null,
    "profileId": "pfl_3nnfepufdN",
    "recurringType": null,
    "resource": "payment",
    "settlementId": null,
    "status": "expired",
    "subscriptionId": null,
  },
  Payment {
    "amount": "100.00",
    "amountRefunded": null,
    "amountRemaining": null,
    "cancelledDatetime": null,
    "createdDatetime": "2017-04-29T15:13:24.0Z",
    "customerId": null,
    "description": "Test payment",
    "details": null,
    "expiredDatetime": "2017-04-29T15:30:01.0Z",
    "expiryPeriod": null,
    "id": "tr_ryejpPmqv9",
    "links": Object {
      "redirectUrl": "https://www.example.org/",
      "webhookUrl": "http://requestb.in/",
    },
    "locale": "nl",
    "mandateId": null,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "paidDatetime": null,
    "profileId": "pfl_3nnfepufdN",
    "recurringType": null,
    "resource": "payment",
    "settlementId": null,
    "status": "expired",
    "subscriptionId": null,
  },
]
`;

exports[`payments .all() should work with a callback 1`] = `
Array [
  Payment {
    "amount": "100.00",
    "amountRefunded": null,
    "amountRemaining": null,
    "cancelledDatetime": null,
    "createdDatetime": "2017-04-29T21:48:33.0Z",
    "customerId": null,
    "description": "Test payment",
    "details": null,
    "expiredDatetime": "2017-04-29T22:05:01.0Z",
    "expiryPeriod": null,
    "id": "tr_nBeryjMVjr",
    "links": Object {
      "redirectUrl": "https://www.example.org/",
      "webhookUrl": "http://requestb.in/",
    },
    "locale": "nl",
    "mandateId": null,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "paidDatetime": null,
    "profileId": "pfl_3nnfepufdN",
    "recurringType": null,
    "resource": "payment",
    "settlementId": null,
    "status": "expired",
    "subscriptionId": null,
  },
  Payment {
    "amount": "100.00",
    "amountRefunded": null,
    "amountRemaining": null,
    "cancelledDatetime": null,
    "createdDatetime": "2017-04-29T15:13:24.0Z",
    "customerId": null,
    "description": "Test payment",
    "details": null,
    "expiredDatetime": "2017-04-29T15:30:01.0Z",
    "expiryPeriod": null,
    "id": "tr_ryejpPmqv9",
    "links": Object {
      "redirectUrl": "https://www.example.org/",
      "webhookUrl": "http://requestb.in/",
    },
    "locale": "nl",
    "mandateId": null,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "paidDatetime": null,
    "profileId": "pfl_3nnfepufdN",
    "recurringType": null,
    "resource": "payment",
    "settlementId": null,
    "status": "expired",
    "subscriptionId": null,
  },
]
`;

exports[`payments .create() should return a payment instance 1`] = `
Payment {
  "amount": "100.00",
  "amountRefunded": null,
  "amountRemaining": null,
  "cancelledDatetime": null,
  "createdDatetime": "2017-04-29T21:48:33.0Z",
  "customerId": null,
  "description": "Test payment",
  "details": null,
  "expiredDatetime": "2017-04-29T22:05:01.0Z",
  "expiryPeriod": null,
  "id": "tr_nBeryjMVjr",
  "links": Object {
    "redirectUrl": "https://www.example.org/",
    "webhookUrl": "http://requestb.in/",
  },
  "locale": "nl",
  "mandateId": null,
  "metadata": null,
  "method": "ideal",
  "mode": "test",
  "paidDatetime": null,
  "profileId": "pfl_3nnfepufdN",
  "recurringType": null,
  "resource": "payment",
  "settlementId": null,
  "status": "expired",
  "subscriptionId": null,
}
`;

exports[`payments .create() should work with a callback 1`] = `
Payment {
  "amount": "100.00",
  "amountRefunded": null,
  "amountRemaining": null,
  "cancelledDatetime": null,
  "createdDatetime": "2017-04-29T21:48:33.0Z",
  "customerId": null,
  "description": "Test payment",
  "details": null,
  "expiredDatetime": "2017-04-29T22:05:01.0Z",
  "expiryPeriod": null,
  "id": "tr_nBeryjMVjr",
  "links": Object {
    "redirectUrl": "https://www.example.org/",
    "webhookUrl": "http://requestb.in/",
  },
  "locale": "nl",
  "mandateId": null,
  "metadata": null,
  "method": "ideal",
  "mode": "test",
  "paidDatetime": null,
  "profileId": "pfl_3nnfepufdN",
  "recurringType": null,
  "resource": "payment",
  "settlementId": null,
  "status": "expired",
  "subscriptionId": null,
}
`;

exports[`payments .get() should return a payment instance 1`] = `
Payment {
  "amount": "100.00",
  "amountRefunded": null,
  "amountRemaining": null,
  "cancelledDatetime": null,
  "createdDatetime": "2017-04-29T21:48:33.0Z",
  "customerId": null,
  "description": "Test payment",
  "details": null,
  "expiredDatetime": "2017-04-29T22:05:01.0Z",
  "expiryPeriod": null,
  "id": "tr_nBeryjMVjr",
  "links": Object {
    "redirectUrl": "https://www.example.org/",
    "webhookUrl": "http://requestb.in/",
  },
  "locale": "nl",
  "mandateId": null,
  "metadata": null,
  "method": "ideal",
  "mode": "test",
  "paidDatetime": null,
  "profileId": "pfl_3nnfepufdN",
  "recurringType": null,
  "resource": "payment",
  "settlementId": null,
  "status": "expired",
  "subscriptionId": null,
}
`;

exports[`payments .get() should work with a callback 1`] = `
Payment {
  "amount": "100.00",
  "amountRefunded": null,
  "amountRemaining": null,
  "cancelledDatetime": null,
  "createdDatetime": "2017-04-29T21:48:33.0Z",
  "customerId": null,
  "description": "Test payment",
  "details": null,
  "expiredDatetime": "2017-04-29T22:05:01.0Z",
  "expiryPeriod": null,
  "id": "tr_nBeryjMVjr",
  "links": Object {
    "redirectUrl": "https://www.example.org/",
    "webhookUrl": "http://requestb.in/",
  },
  "locale": "nl",
  "mandateId": null,
  "metadata": null,
  "method": "ideal",
  "mode": "test",
  "paidDatetime": null,
  "profileId": "pfl_3nnfepufdN",
  "recurringType": null,
  "resource": "payment",
  "settlementId": null,
  "status": "expired",
  "subscriptionId": null,
}
`;
